49
================

14/08/24 Mobile friendly layout for find event, person waitinglist, incident #1103
14/08/24 Mobile UI: bug where add animal/shelter code not sent
14/08/24 Mobile friendly layout for find animal, find lost/found #1103
14/08/24 Use 3 col layout for animal details with 3rd for additional #1103
13/08/24 Use table reflow widget for portrait smartphone browsers #1103
13/08/24 Use bootstrap grids to make a start on fix mobile layout #1103
12/08/24 Fix for iPhone 17.3+ uploading images with no mimetype
12/08/24 Querybuilder: Add additional field date range criteria
12/08/24 Mobile UI: Hide disabled fields #1521
12/08/24 Bulk change animals: Hide disabled fields and areas without permission #1520
12/08/24 Online forms: Creating reserves, set additional field values form the form #1523
08/08/24 Performance: Snapshot unit test db and copy it instead of regenerating 
08/08/24 Performance: When building schema.db, there is no need to install default data
07/08/24 Make sure to clone species setting when cloning online form fields
06/08/24 When merging animals from csv, don't overwrite location if not given #1516
06/08/24 Validate against full HTML documents in online form markup fields
04/08/24 Fix performance bug with onshelter simple search
04/08/24 animal_embed: retrieve full record on click
03/08/24 Do not hide transports with null type
02/08/24 Bad comparison brought boarding animals on shelter tomorrow
02/08/24 Redundant adoptapet mapping for Chinchilla removed
02/08/24 location filters now apply to all animal search keywords eg: hold, etc.
02/08/24 Hide never vacc/no rabies vacc alerts for users with no view vacc permission
01/08/24 Display emblems for mother on edit litters screen #1513
01/08/24 Add ANIMALLITTER csv import field
01/08/24 Update 34803: By->MovedBy so it doesn't break the update path on MySQL
01/08/24 PetFinder: Omit cruelty case flagged animals from Stray/Hold uploads