@@ -1,6 +1,7 @@
 49
 ================
 
+14/08/24 Fix bulk change animals layout #1103
 14/08/24 Mobile friendly layout for find event, person waitinglist, incident #1103
 14/08/24 Mobile UI: bug where add animal/shelter code not sent
 14/08/24 Mobile friendly layout for find animal, find lost/found #1103
